--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
     <main>
         <div id="content">
-
+            <div class="row" id="navspace"></div>
+            <div class="row" id="r0"></div>
         </div>
     </main>
 </body>
