--- a/index.html
+++ b/index.html
@@ -355,6 +355,13 @@
                     </div>
                 </div>
             </div>
+            <div class="row" id="media">
+                <div class="medialogo" id="media_cnbc">CNBC</div>
+                <div class="medialogo" id="media_lh">lifehacker</div>
+                <div class="medialogo" id="media_tc">techcrunch</div>
+                <div class="medialogo" id="media_money">money</div>
+                <div class="medialogo" id="media_npr">npr</div>
+            </div>
         </div>
     </main>
 </body>
