fixed a thing idk

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                 <div class="medialogo" id="media_money">money</div>
                 <div class="medialogo" id="media_npr">npr</div>
             </div>
+            <div class="row info" id="info1"></div>
         </div>
     </main>
 </body>
