--- a/index.html
+++ b/index.html
@@ -362,7 +362,18 @@
                 <div class="medialogo" id="media_money">money</div>
                 <div class="medialogo" id="media_npr">npr</div>
             </div>
-            <div class="row info" id="info1"></div>
+            <div class="row card" id="info1">
+                <div class="cardpic"></div>
+                <div class="cardblurb"></div>
+            </div>
+            <div class="row card" id="info2">
+                <div class="cardblurb"></div>
+                <div class="cardpic"></div>
+            </div>
+            <div class="row squares" id="squares1">
+                <div class="sqsingle" id="sq1a"></div>
+                <div class="sqsingle" id="sq1b"></div>
+            </div>
         </div>
     </main>
 </body>
