--- a/index.html
+++ b/index.html
@@ -367,7 +367,13 @@
                 <div class="cardblurb"></div>
             </div>
             <div class="row card" id="info2">
-                <div class="cardblurb"></div>
+                <div class="cardblurb">
+                    <h3 class="cardh3">BEST CARD TO USE</h3>
+                    <h2 class="cardh2">Maximize rewards on every purchase</h2>
+                    <p class="cardp">Auto-activation of Amex Offers, BankAmeriDeals, Chase Offers, Citi Merchant Offers and more</p>
+                    <p class="cardp">Auto-activation of American Express and Chase card member benefits</p>
+                    <p class="cardp">Auto-activation of Chase and Discover bonus categories</p>
+                </div>
                 <div class="cardpic"></div>
             </div>
             <div class="row squares" id="squares1">
