--- a/index.html
+++ b/index.html
@@ -364,7 +364,13 @@
             </div>
             <div class="row card" id="info1">
                 <div class="cardpic"></div>
-                <div class="cardblurb"></div>
+                <div class="cardblurb">
+                    <h3 class="cardh3">AUTO-ACTIVATION</h3>
+                    <h2 class="cardh2">Unlock thousands in offers and benefits instantly</h2>
+                    <p class="cardp">Proactive activation of Amex Offers, BankAmeriDeals, Chase Offers, Citi Merchant Offers and more</p>
+                    <p class="cardp">Automatic activation of Chase and Discover revolving bonus categories</p>
+                    <p class="cardp">Exclusive to MaxReward Gold members. Learn more →</p>
+                </div>
             </div>
             <div class="row card" id="info2">
                 <div class="cardblurb">
