--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@
 <body>
     <main>
         <div id="content">
+            <div class="row" id="navspace"></div>
+            <div class="row" id="aboutcopy">
+                <h3 id="abouth3">ABOUT US</h3>
+                <h1 id="abouth1">Our mission is empower people to earn extraordinary benefits from everyday spend</h1>
+                <p class="aboutp">The average American household can earn over $2,000 in tax-free rewards and savings every year! However, few do, since it takes so much time and effort. We build technology that automates savings.</p>
+                <p class="aboutp">We help consumers maximize credit card rewards and cashback by proactively activating offers and benefits, providing personalized recommendations for card usage and aggregating bills, spend, savings and more.</p>
+                <p class="aboutp">Our goal is to help everyone get more value from their credit cards and spend, and translate greater savings into treasured memories and experiences.</p>
+            </div>
         </div>
     </main>
 </body>
