--- a/about.html
+++ b/about.html
@@ -13,6 +13,14 @@
                 <p class="aboutp">We help consumers maximize credit card rewards and cashback by proactively activating offers and benefits, providing personalized recommendations for card usage and aggregating bills, spend, savings and more.</p>
                 <p class="aboutp">Our goal is to help everyone get more value from their credit cards and spend, and translate greater savings into treasured memories and experiences.</p>
             </div>
+            <div class="row" id="team">
+                <h3 id="teamh3">TEAM</h3>
+                <div id="teamrow">
+                    <div class="teamcard" id="tc1"></div>
+                    <div class="teamcard" id="tc1"></div>
+                    <div class="teamcard" id="tc1"></div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
