--- a/about.html
+++ b/about.html
@@ -21,6 +21,10 @@
                     <div class="teamcard" id="tc1"></div>
                 </div>
             </div>
+            <div class="row" id="hiring">
+                <h2 id="hiringh2">🎉 We raised $3M to empower people to earn extraordinary benefits from everyday spend.</h2>
+                <p id="hiringp">We are hiring for numerous roles</p>
+            </div>
         </div>
     </main>
 </body>
