update something idk

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
             <div class="row" id="hiring">
                 <h2 id="hiringh2">🎉 We raised $3M to empower people to earn extraordinary benefits from everyday spend.</h2>
                 <p id="hiringp">We are hiring for numerous roles</p>
+                <button class="buttons"
             </div>
         </div>
     </main>
