--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div class="row" id="hiring">
                 <h2 id="hiringh2">🎉 We raised $3M to empower people to earn extraordinary benefits from everyday spend.</h2>
                 <p id="hiringp">We are hiring for numerous roles</p>
-                <button class="buttons"
+                <button class="buttons" id="hiringb">See Open Roles →</button>
             </div>
         </div>
     </main>
