--- a/about.html
+++ b/about.html
@@ -16,15 +16,49 @@
             <div class="row" id="team">
                 <h3 id="teamh3">TEAM</h3>
                 <div id="teamrow">
-                    <div class="teamcard" id="tc1"></div>
-                    <div class="teamcard" id="tc1"></div>
-                    <div class="teamcard" id="tc1"></div>
+                    <div class="teamcard">
+                        <div class="teamid">
+                            <div class="teaminfo">
+                                <p class="teamname">Anik Khan</p>
+                                <p class="teamrole">Co-Founder and CEO</p>
+                            </div>
+                            <button class="teamli buttons"></button>
+                        </div>
+                    </div>
+                    <div class="teamcard">
+                        <div class="teamid">
+                            <div class="teaminfo">
+                                <p class="teamname">David Gao</p>
+                                <p class="teamrole">Co-Founder and CTO</p>
+                            </div>
+                            <button class="teamli buttons"></button>
+                        </div>
+                    </div>
+                    <div class="teamcard">
+                        <div class="teamid">
+                            <div class="teaminfo">
+                                <p class="teamname">Ibrahim Saberi</p>
+                                <p class="teamrole">Lead Developer</p>
+                            </div>
+                            <button class="teamli buttons"></button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row" id="hiring">
                 <h2 id="hiringh2">🎉 We raised $3M to empower people to earn extraordinary benefits from everyday spend.</h2>
                 <p id="hiringp">We are hiring for numerous roles</p>
                 <button class="buttons" id="hiringb">See Open Roles →</button>
+            </div>
+            <div class="row" id="investors">
+                <h3 id="investorh3">INVESTORS</h3>
+                <div id="investrow">
+                    <div class="investor">DUNDEE</div>
+                    <div class="investor">CALANO</div>
+                    <div class="investor">TECHSTARS</div>
+                    <div class="investor">FINTECH VENTURES FUND</div>
+                    <div class="investor">SERVICE</div>
+                </div>
             </div>
         </div>
     </main>
