--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
         </nav>
-        <div id="content">
+        <div class="content">
             <div class="row" id="navspace"></div>
             <div class="row" id="aboutcopy">
                 <h3 id="abouth3">ABOUT US</h3>
