--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
         </nav>
-        <div id="content">
+        <div class="content">
             <div class="row" id="r0">
                 <div id="announce">🎉 ANNOUNCEMENT: We raised $3M to empower people to earn extraordinary benefits from everyday spend.</div>
             </div>
