--- a/privacy.html
+++ b/privacy.html
@@ -11,8 +11,11 @@
                 </div>
             </div>
         </nav>
-        <div id="content">
-            <div class="row" id="navspace"></div>
+        <div class="row" id="privacy">
+            <div class="content"></div>
+        </div>
+
+            <div id="pwhite"></div>
         </div>
     </main>
 </body>
