--- a/privacy.html
+++ b/privacy.html
@@ -12,10 +12,21 @@
             </div>
         </nav>
         <div class="row" id="privacy">
-            <div class="content"></div>
+            <div id="datewhite"></div>
+            <div class="content" id="contentpriv">
+                    <div id="privhalf1">
+                        <h1 id="privh1">Privacy & Security</h1>
+                        <h3 id="privh3">Last Updated September 10, 2021</h3>
+                    </div>
+                    <div id="privhalf2">
+                        <div id="thing"></div>
+                    </div>
+            </div>
         </div>
-
-            <div id="pwhite"></div>
+        <div class="row" id="privblurb">
+            <div class="content" id="privblurbcontent">
+                
+            </div>
         </div>
     </main>
 </body>
