--- a/privacy.html
+++ b/privacy.html
@@ -25,7 +25,12 @@
         </div>
         <div class="row" id="privblurb">
             <div class="content" id="privblurbcontent">
-                
+                <p class="pbc">The security of your credentials and data is our highest priority, and we've implemented industry best practices or gone above-and-beyond to ensure your information is as safe and secure as can be.</p>
+                <p class="pbc">When you connect an account on MaxRewards, we encrypt your credentials with two different codes. One is stored in our primary database, the other is stored in a database hosted by another cloud provider. This way, if someone hacks our primary database, they still won't be able to decrypt account credentials.</p>
+                <p class="pbc">We don't store credentials on the app. If your phone is hacked, users cannot access your bank credentials from MaxRewards.</p>
+                <p class="pbc">The app never directly connects to our database. Instead, it connects through a middleware layer that validates every request and provides limited access.</p>
+                <p class="pbc">Our engineering team is located on-site in Atlanta, Georgia and all development for our connectors is done in-house. No third-party has access to our code or data.</p>
+                <p class="pbc">Every member of our staff is an avid user of MaxRewards, and our own personal and financial data is stored on the platform. We have strong personal and professional interests in ensuring our data is safe, secure and private.</p>
             </div>
         </div>
     </main>
