--- a/press.html
+++ b/press.html
@@ -17,7 +17,13 @@
                     <h1 id="pressh1">MaxRewards raises $3M to empower people to earn extraordinary benefits from everyday spend</h1>
                     <div id="pressinfo">
                         <h3 id="pressh3">September 10, 2021</h3>
-                        <div id="presslinks"></div>
+                        <div id="presslinks">
+                            <button class="buttons socialb"></button>
+                            <button class="buttons socialb"></button>
+                            <button class="buttons socialb"></button>
+                            <button class="buttons socialb"></button>
+                            <button class="buttons socialb"></button>
+                        </div>
                     </div>
                     <div id="pressimage">
                         <div id="thingpress"></div>
@@ -32,6 +38,15 @@
                 <p class="pbc">The app never directly connects to our database. Instead, it connects through a middleware layer that validates every request and provides limited access.</p>
                 <p class="pbc">Our engineering team is located on-site in Atlanta, Georgia and all development for our connectors is done in-house. No third-party has access to our code or data.</p>
                 <p class="pbc">Every member of our staff is an avid user of MaxRewards, and our own personal and financial data is stored on the platform. We have strong personal and professional interests in ensuring our data is safe, secure and private.</p>
+                <div id="seperator"></div>
+                    <p id="sharep">Share this Story</p>
+                <div id="presslinks socialalign">
+                    <button class="buttons socialb"></button>
+                    <button class="buttons socialb"></button>
+                    <button class="buttons socialb"></button>
+                    <button class="buttons socialb"></button>
+                    <button class="buttons socialb"></button>
+                </div>
             </div>
         </div>
     </main>
